# conspiracy

./: .clang-tidy  .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  CYXCLOUD.md  CYXHOST.md  CYXRELAY.md  CYXREPUTATION.md  CYXTOKEN.md  Doxyfile  GUI.md  GUIDANCE.md  How_To.md  README.md  TRUTH.md  cyxwiz-messaging.md  cyxwiz-protocol.md  cyxwiz-routing.md  usage.md  vcpkg.json
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
daemon/: main.c
demo/: README.md  run_demo.ps1  run_demo.sh
docs/: CYXHOST_DESIGN.md  ERROR_CODES.md
include/cyxwiz/: compute.h  consensus.h  crypto.h  dht.h  log.h  memory.h  obfuscation.h  onion.h  peer.h  privacy.h  routing.h  storage.h  transport.h  types.h  upnp.h  zkp.h
src/core/: compute.c  consensus.c  dht.c  discovery.c  onion.c  peer.c  routing.c  storage.c
src/crypto/: credentials.c  crypto.c  mac.c  primitives.c  privacy.c  sharing.c  zkp.c
src/transport/: bluetooth.c  bluetooth_win.cpp  bluetooth_win.h  lora.c  obfuscation.c  transport.c  udp.c  upnp.c  wifi_direct.c  wifi_direct_win.cpp  wifi_direct_win.h
src/util/: log.c  memory.c
tests/: test_anon_msg_e2e.c  test_anon_voting_e2e.c  test_compute.c  test_consensus.c  test_crypto.c  test_dht.c  test_integration_udp.c  test_onion.c  test_peer.c  test_privacy.c  test_routing.c  test_routing_multihop.c  test_storage.c  test_transport.c  test_udp.c  test_zkp.c
tests/fuzz/: fuzz_onion.c  fuzz_routing.c
tools/: Dockerfile  bootstrap.c  consensus_test.c  cyxchat-server.c  docker-compose.yml
